name:                mbox-simple
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -O2 -Wall
  default-language:    Haskell2010
  build-depends:       base >=4.11.0 && <4.15
                     , text >=1.2.3 && <1.3
  exposed-modules:     Codec.MBox
